<resources>
    <string name="app_name">Room-service</string>
    <string name="title_activity_login">Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="start_time">Starting time of your reservation:</string>
    <string name="end_time">Time your resevation will end:</string>
    <string name="desc">Description</string>
    <string name="save">Save</string>
    <string name="Time">00:00</string>
    <string name="status">Status</string>
</resources>
