<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="happysoftware.thomv.room_service.Room_details">

    <TextView
        android:id="@+id/tv_EndTime"
        android:layout_width="208dp"
        android:layout_height="18dp"
        android:text="@string/end_time"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Tv_StartTime"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/Tv_StartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:layout_marginTop="113dp"
        app:layout_constraintTop_toBottomOf="@+id/Lv_Time"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="8dp" />

    <ListView
        android:id="@+id/Lv_Time"
        android:layout_width="198dp"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/Tv_sTime"
        android:onClick="onTimeClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="105dp"
        android:text="@string/Time"
        app:layout_constraintBottom_toBottomOf="@+id/tv_eTime"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintLeft_toRightOf="@+id/Tv_StartTime"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lv_Time"
        app:layout_constraintVertical_bias="0.32"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tv_eTime"
        android:onClick="onTimeClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="130dp"
        android:text="@string/Time"
        app:layout_constraintBottom_toTopOf="@+id/Et_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tv_EndTime"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lv_Time"
        app:layout_constraintVertical_bias="0.888"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <EditText
        android:id="@+id/Et_description"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="text"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_EndTime"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/Bt_save"
        android:onClick="onSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Et_description"
        app:layout_constraintVertical_bias="0.428"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tv_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Tv_StartTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lv_Time"
        app:layout_constraintVertical_bias="0.787"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Ly_Status"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="94dp"
        android:alpha="00"
        android:background="FF0000"
        android:backgroundTint="0xFFFF0000"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Tv_StartTime"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Lv_Time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:background="FF0000">

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/Tv_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Ly_Status"
        app:layout_constraintRight_toLeftOf="@+id/Lv_Time"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintVertical_bias="0.96" />

</android.support.constraint.ConstraintLayout>
